--- a/css/style.css
+++ b/css/style.css
@@ -1249,6 +1249,7 @@ fieldset {
   opacity: 0.6;
 }
 
-.error__ad-form {
-  box-shadow: 0 0 0 5px #ff0000;
+input:invalid,
+select:invalid {
+  border: 3px solid red;
 }
