--- a/css/style.css
+++ b/css/style.css
@@ -806,10 +806,12 @@ fieldset {
 }
 
 .ad-form__photo {
+  display: flex;
+  flex-wrap: wrap;
   margin-right: 10px;
   margin-bottom: 10px;
 
-  width: 70px;
+  width: 280px;
   height: 70px;
 
   background-color: #e4e4de;
